--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 .container
 {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(10,1fr);
-    /* grid-auto-flow: column; */
-    /* grid-auto-rows: 60px; */
-}   
+    margin-left: 40%;
+    margin-top: 15%;
+    width: 300px;
+}
 
 .submission
 {
-    grid-column-start: 3;
+    margin-bottom: 10px;
+    /* row-gap: 150px; */
+}
+
+#s
+{
+    padding-left: 15%
+}
+
+.anime
+{
+    animation-duration: 0.75s;
+    animation-name: slidein;
+    animation-direction: alternate;
+    animation-fill-mode: forwards;
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 40%;
+        margin-top: 15%;
+        width: 300px;
+    }
+  
+    to {
+        margin-left: 30px;
+        margin-top: 15%;
+        width: 300px;
+    }
 }
